Реализован поиск собитый по логину пользователя